# NapCatAIChatAssassin

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run-napcat-aichat-assassin.sh
.github/workflows/: ci.yml
OlivOSAIChatAssassin/: __main__.py  app.json  clients.py  main.py
scripts/: build-release.ps1
src/: config.rs  main.rs  napcat.rs  openai.rs  tools.rs  util.rs
