[package]
name = "napcat-aichat-assassin-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Rust runtime for NapCatAIChatAssassin"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
