[package]
name = "napcat-aichat-assassin-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Rust runtime for NapCatAIChatAssassin"

[dependencies]
anyhow = "=1.0.100"
chrono = { version = "=0.4.42", features = ["clock", "serde"] }
futures-util = "=0.3.31"
indexmap = "=2.2.6"
rand = "=0.9.2"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "=1.46.1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
url = "=2.4.1"
