[build-system]
requires = ["setuptools>=63.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napcat-aichat-assassin"
version = "2.0.0"
description = "NapCat-based group chat assassin with OpenAI-compatible fallback transport"
readme = "README.md"
requires-python = ">=3.7"
authors = []
license = {text = "AGPLv3 License"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/Wind-DeterMination-backup/NapCatAIChatAssassin"
Issues = "https://github.com/Wind-DeterMination-backup/NapCatAIChatAssassin/issues"

[project.scripts]
napcat-aichat-assassin = "OlivOSAIChatAssassin.main:main"
